"image-src" support is missing. We only support "-webkit-image-src" https://bugs.webkit.org/show_bug.cgi?id=159373 <rdar://problem/27140443>

Patch by Brent Fulgham and Dean Jackson.
Reviewed by Dean Jackson and Brent Fulgham.

Source/WebCore:

Support unprefixed image-set.

Test: fast/css/image-set-unprefixed.html

* css/CSSImageSetValue.cpp:
(WebCore::CSSImageSetValue::customCSSText):
* css/CSSParser.cpp:
(WebCore::isImageSetFunctionValue): New helper function
that checks prefixed and unprefixed form.
(WebCore::CSSParser::parseValue): Use the helper.
(WebCore::CSSParser::parseContent):
(WebCore::CSSParser::parseFillImage):
(WebCore::CSSParser::parseBorderImage):

LayoutTests:

Convert some existing tests to use the unprefixed form,
and add a test that checks we are compatible with
the prefixed form.

* cssom/cssvalue-comparison-expected.txt:
* cssom/cssvalue-comparison.html:
* fast/css/cursor-parsing-image-set-expected.txt:
* fast/css/cursor-parsing-image-set.html:
* fast/css/image-set-setting-expected.txt:
* fast/css/image-set-unprefixed-expected.txt: Added.
* fast/css/image-set-unprefixed.html: Added.
* fast/css/script-tests/image-set-setting.js:
(testImageSetRule):

Canonical link: https://commits.webkit.org/177496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202765 268f45cc-cd09-0410-ab3c-d52691b4dbfc