LayoutTests/fast/css/script-tests/image-set-setting.js
@@ -1,4 +1,4 @@
-description("Test the setting of the -webkit-image-set function.");
+description("Test the setting of the image-set function.");
 
 function testComputedStyle(property, fullRule)
 {
@@ -15,7 +15,7 @@ function testImageSetRule(description, property, rule, expected)
     debug("");
     debug(description + " : " + rule);
 
-    var fullRule = "-webkit-image-set(" + rule + ")";
+    var fullRule = "image-set(" + rule + ")";
     shouldBeEqualToString('testComputedStyle("' + property + '", "' + fullRule + '")', fullRule);
 }
 
